# snes

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust-test.yml  rust.yml
snes-core/: Cargo.toml
snes-core/src/: bus.rs  cpu.rs  emulator.rs  lib.rs
snes-core/src/common/: flags.rs  instructions.rs  mod.rs
snes-core/src/cpu/: bus.rs  cpu.rs  cycles.rs  dma.rs  instructions.rs  interface.rs  internal_registers.rs  mod.rs  registers.rs  vectors.rs
snes-core/src/cpu/instructions/: adc.rs  and.rs  asl.rs  bcc.rs  bcs.rs  beq.rs  bit.rs  bit_common.rs  bmi.rs  bne.rs  bpl.rs  bra.rs  branch_common.rs  brk.rs  brl.rs  bvc.rs  bvs.rs  clc.rs  cld.rs  cli.rs  clv.rs  cmp.rs  comp_common.rs  cop.rs  cpx.rs  cpy.rs  dec.rs  dec_common.rs  decoder_common.rs  dex.rs  dey.rs  eor.rs  inc.rs  inx.rs  iny.rs  jmp.rs  jsr.rs  lda.rs  ldx.rs  ldy.rs  (+61 more)
snes-core/src/ppu/: interface.rs  mod.rs  ppu.rs  registers.rs
snes-core/src/rom/: lo_rom.rs  mod.rs  special_ram_cart.rs
snes-core/src/utils/: addressing.rs  alu.rs  color.rs  mod.rs  num_trait.rs
snes-cpu-test-runner/: Cargo.toml
snes-cpu-test-runner/src/: main.rs
snes-frontend/: Cargo.toml
snes-frontend/src/: cpu.rs  lib.rs  main.rs  ppu.rs  state.rs
snes-frontend/src/emu_state/: debug_options.rs  emulation.rs  mod.rs  state.rs
snes-frontend/src/emu_ui/: game.rs  menu.rs  mod.rs
snes-frontend/src/emu_ui/debug/: common.rs  cpu.rs  debug.rs  memory_map.rs  mod.rs  ppu.rs  ppu_graphics.rs
snes-frontend/src/ui/: game.rs  menu.rs  mod.rs
snes-frontend/src/utils/: frame_limiter.rs  mod.rs
(+97 files in other folders)
