[package]
name = "snes-cpu-test-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snes-core = { path = "../snes-core" }

serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
