[package]
name = "snes-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
imgui = "0.8.2"
wgpu = "0.12.0"
imgui-wgpu = "0.19.0"
pollster = "0.2.5"
[dependencies.imgui-winit-support]
version = "0.8.2"
features = ["winit-26"]
default-features = false
