[package]
name = "snes-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snes-core = { path = "../snes-core" }

# Frontend stuff
eframe = "0.29.1"
env_logger = "0.10.1"
rfd = "0.12.1"
regex = "1.10.2"
wgpu = "23.0.0"

[features]
wgpu = ["eframe/wgpu"]
